Fix overflow uploading large numbers of files

--- a/index.css
+++ b/index.css
@@ -173,6 +173,8 @@ h1, h2 {
 	background-color: white;
 	display: inline-block;
 	padding: 30px;
+	max-height: 60vh;
+	overflow: scroll;
 }
 
 .renameButton {
